# AllocX

./: CMakeLists.txt  Custom High-Performance Memory Allocator in C++ 2d089785ffe68078a35bd2ce50e58d44.md  README.md
benchmarks/: benchmark_main.cpp
examples/: basic_usage.cpp  stl_integration.cpp
include/allocx/: allocator_base.hpp  freelist_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp  stl_adapter.hpp  thread_safe.hpp  utils.hpp
src/: freelist_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp
tests/: test_main.cpp
